fsl (5.0.7-2) UNRELEASED; urgency=medium

  * Add a patch to make randomise_parallel work on systems that do not have
    bash as their default shell (Closes: #693373). Thanks to Philip Chase for
    the patch.
  * Add a patch to honor an unset FSLPARALLEL (do not submit jobs to a
    cluster) even in cases where SGE_ROOT is set (Closes: #685757). Thanks to
    German Gomez-Herrero for the patch.

 -- Michael Hanke <mih@debian.org>  Thu, 17 Jul 2014 15:44:44 +0200

fsl (5.0.7-1) unstable; urgency=medium

  * New upstream release.
    - new component: gps
  * Remove the documentation from the source package due to a number of files
    with unclear origin and license. Consequently, the -doc has been removed
    as well. Upstream confirms that documentation is best consumed from the
    live wiki on the project homepage.
  * Move the -gpu package setup into a patch that can be applied to backports
    to particular releases. The current Debian unstable doesn't have a
    functional nvcc and it is i386 and amd64 only anyway.
  * Cleanup and remove old and merged patches.
  * Bumped Standard version to 3.9.5 -- no changes necessary.

 -- Michael Hanke <mih@debian.org>  Fri, 11 Jul 2014 17:22:13 +0200

fsl (5.0.6-2) unstable; urgency=medium

  [ Yaroslav Halchenko ]
  * debian/control
    - limit build-depends on nvidia-cuda-toolkit only for x86 architectures

  [ Michael Hanke ]
  * Add libpng-dev as an alternative build-dependency to libpng12-dev (Closes:
    #662337).
  * Switch dependencies to plain tcl and tk packages (from tcl8.4/tk8.4).
    This acknowledges the NMU of fsl-4.1 by Sergei Golovan to fix #737187.

 -- Michael Hanke <mih@debian.org>  Mon, 14 Apr 2014 19:00:40 +0200

fsl (4.1.9-7.2) unstable; urgency=low

  * Non-maintainer upload.
  * Really replaced tcl8.4 and tk8.4 by tcl and tk in the package dependencies
    (Closes: #737187).

 -- Sergei Golovan <sgolovan@debian.org>  Sat, 15 Mar 2014 21:03:23 +0400

fsl (4.1.9-7.1) unstable; urgency=low
